added more lines :/

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
+    <link rel="icon"  type="image/img_type" href="/finace-control.png"/>
+    <link rel="shortcut icon"  type="image/x-icon" href="/finace-control.png">
+    <link rel="apple-touch-icon" href="/finace-control.png">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap" rel="stylesheet">
     <title>Athomo | Finance Control</title>
   </head>
